--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -38,6 +39,14 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <View
+                android:id="@+id/divider7"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="?android:attr/listDivider"
+                android:paddingTop="2dp" />
+
             <ImageView
                 android:id="@+id/parking_icon_list"
                 android:layout_width="wrap_content"
@@ -48,6 +57,14 @@
                 android:padding="4dp"
                 android:scaleType="center"
                 android:src="@drawable/ic_baseline_local_parking_24" />
+
+            <View
+                android:id="@+id/divider6"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="?android:attr/listDivider"
+                android:padding="2dp" />
 
             <ImageView
                 android:id="@+id/accessible_icon_list"
@@ -67,6 +84,7 @@
         android:id="@+id/divider5"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="4dp"
         android:background="?android:attr/listDivider" />
 
 </LinearLayout>
