--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -61,13 +61,20 @@
             android:id="@+id/map_container">
 <!--            <include layout="@layout/fragment_parking_map" />-->
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/request_lot"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_margin="@dimen/fab_margin"
-                    app:srcCompat="@android:drawable/ic_input_add" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/request_lot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginStart="@dimen/fab_margin"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="@dimen/fab_margin"
+                android:layout_marginEnd="@dimen/fab_margin"
+                android:layout_marginRight="@dimen/fab_margin"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:tint="#800080"
+                app:backgroundTint="#FFFFFF"
+                app:srcCompat="@android:drawable/ic_input_add" />
 
 
             <com.google.android.gms.maps.MapView
